--- a/index.html
+++ b/index.html
@@ -26,29 +26,29 @@
        </a>
         <blockquote>
           <center>
-            <div id="date">202X年X月X日 星期X 农历X月XX XXXX</div>
+            <div id="date"></div>
             <center></center>
           </center>
         </blockquote>
         <ol start='' id="news">
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
-          <li>首都各界欢庆北京申办2008年奥运会成功，北京喜获2008年奥运会主办权，谱写奥运史上最壮丽的篇章。</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ol>
         <blockquote>
-          <em><center><span id="weiyu">自强 弘毅 求是 拓新</span></center></em>
+          <em><center><span id="weiyu"></span></center></em>
         </blockquote>
         <figure>
           <table>
@@ -68,9 +68,6 @@
             <tbody>
             </tbody>
           </table>
-        <!-- 版权信息从这里开始 -->
-        <a href="https://github.com/zkeq/news"><p style="color: #ff1485;">Made with ❤ by zkeq.</p></a>
-        <!-- 版权信息从这里结束，想要去掉版权的话 只需要注释掉这些部分就好啦 -->
         </figure>
       </div>
     </div>
